--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
   supabase_flutter: ^2.8.1
-  flutter_dotenv: ^5.0.2
+  flutter_dotenv: ^5.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
