--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,13 @@ dependencies:
     sdk: flutter
   supabase_flutter: ^2.8.1
   flutter_dotenv: ^5.2.1
-
+  flutter_secure_storage: ^9.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   crypto: ^3.0.6
+  
 
 dev_dependencies:
   flutter_test:
