--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   crypto: ^3.0.6
   shared_preferences: ^2.3.3
   intl: ^0.20.1
+  web3dart: ^2.7.3
+  http: ^1.2.2
   
 
 dev_dependencies:
@@ -61,6 +63,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/LoginPic.jpg
+    - assets/remesas_abi.json
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
